Hopefully last commit: fixes Ricarda's line not showing up on server

--- a/style.css
+++ b/style.css
@@ -442,7 +442,7 @@ a:visited {
 }
 
 .background-image {
-    background-image: url(assets/rectangle_2.svg);
+    background-image: url(assets/Rectangle_2.svg);
     background-repeat: no-repeat;
     background-position-x: 102%;
     background-position-y: 0%;
